src/test/resources/failing/fail1.pnd
P(x) : string

template Foo {
	P1(x) <- P(x)
}
Foo as S1

template Bar {
	P2(x) <- x = 10
}
Bar as S2, S1
